# Moodys

./: .gitignore  README.md  app.py  moodys_manufacturing_rating.html  pyproject.toml  requirements.txt
src/: __init__.py  config.py  rating_engine.py
